--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="calendar-container">
-<!--       <div class="hour hour-range">
-        <p class="hour hour-current">8:00</p>
-        <p class="hour hour-half">8:30</p>
-      </div>
-      <div class="task-item">
-        <p>Do exercise</p>
-      </div> -->
+    <span class="info">Double click to delete event</span>
+    <div class="calendar-container"></div>
+    <button class="modal-btn">Add an event</button>
+    <div class="modal-window">
+      <p>Name of event:</p>
+      <input type="text" class="event-name" />
+      <p>Start:</p>
+      <input type="time" class="event-time" />
+      <p>Duration:</p>
+      <input type="number" class="event-duration" />
+      <button class="modal-close">Close window</button>
+      <button class="modal-add-event">Add an event</button>
     </div>
+    <script src="./js/eventlist.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
